kube-svc-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-helper-ui
  labels:
    app: db-helper-ui
spec:
  replicas: 2 # Initial number of replicas
  selector:
    matchLabels:
      app: db-helper-ui
  template:
    metadata:
      labels:
        app: db-helper-ui
    spec:
      containers:
        - name: db-helper-ui
          image: ghcr.io/babbage88/dbhelperui:v0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi" # 256 MiB memory
            requests:
              cpu: "250m" # Request 0.25 CPU initially
              memory: "128Mi" # Request 128 MiB memory initially
#---
#apiVersion: autoscaling/v2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: db-helper-ui-hpa
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: db-helper-ui
#  minReplicas: 2
#  maxReplicas: 10
#  metrics:
#    - type: Resource
#      resource:
#        name: cpu
#        target:
#          type: Utilization
#          averageUtilization: 50 # Scale up if CPU usage exceeds 50%
---
apiVersion: v1
kind: Service
metadata:
  name: db-helper-ui-service
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster
  #loadBalancerIP: 10.0.0.73
  selector:
    app: db-helper-ui
  ports:
    - name: db-helper-ui
      port: 8080
      targetPort: 80
      protocol: TCP
