apiIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-helper-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: dbhelperui.trahan.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/(download-pg-scripts.*)
            backend:
              service:
                name: db-helper-api-csvc
                port:
                  number: 8181

          - pathType: ImplementationSpecific
            path: /api/(generate-pg-setup-scripts.*)
            backend:
              service:
                name: db-helper-api-csvc
                port:
                  number: 8181

          - pathType: ImplementationSpecific
            path: /api/(.*)
            backend:
              service:
                name: go-infra-svc
                port:
                  number: 8993
