ingressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-helper-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dbhelperui.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "dbhelperui.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/api/auth"
            backend:
              service:
                name: go-infra-svc
                port:
                  number: 8993
          - pathType: Prefix
            path: "/api/"
            backend:
              service:
                name: db-helper-api-csvc
                port:
                  number: 8181
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: db-helper-api-csvc
                port:
                  number: 8181
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: db-helper-ui-csvc
                port:
                  number: 8080
